deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: board-app
  namespace: board
spec:
  replicas: 2
  selector:
    matchLabels:
      app: board-app
  template:
    metadata:
      labels:
        app: board-app
    spec:
      containers:
        - name: jboss
          image: default-route-openshift-image-registry.apps.ext2.mtp.local/board/eap74-openjdk17-openshift-rhel8:2025-03-13-13-49-49
          ports:
            - containerPort: 8080
          command: ["/bin/sh", "-c"]
          args:
            - "echo '<subsystem xmlns=\"urn:jboss:domain:transactions:5.0\"><core-environment><process-id><uuid /></process-id></core-environment><recovery-environment><socket-binding ref=\"txn-recovery-environment\"/></recovery-environment></subsystem>' >> /opt/eap/standalone/configuration/standalone-openshift.xml && /opt/eap/bin/standalone.sh -b 0.0.0.0 --server-config=standalone-openshift.xml"
