service.yaml
apiVersion: v1
kind: Service
metadata:
  name: board-service
  namespace: board
spec:
  selector:
    app: board-app
  ports:
    - protocol: TCP
#      port: 80
      targetPort: 8080
