route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: board-route
  namespace: board
spec:
  to:
    kind: Service
    name: board-service
  tls:
    termination: ""
  host: cys.board.com
  port:
    targetPort: 8080
